add commentPage project

--- a/Section 25/commentPage/index.html
+++ b/Section 25/commentPage/index.html
@@ -23,6 +23,16 @@
     
     </section>
 
+    <section>
+        <h2>Input Event: see what you type</h2>
+        <form action="/event" >
+            <input type="text" name="type" placeholder="type" id="h3comment">
+        </form>
+        <h3 id="h3">Nothing Typed
+        </h3>
+    
+    </section>
+
    
 
     <script src="app.js"></script>
